# AIPainter-Frontend

./: .env  .env.production  .eslintrc.js  .gitignore  .umirc.ts  README.md  Readme.md  package-lock.json  package.json  tsconfig.json
src/: app.tsx  global.less
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.updater.key  tauri.updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons.iconset/: icon.icns
src-tauri/resources/dy-drafts/contents/: material_animation.json  speed.json  text.json  track_video_segment.json  video.json
src-tauri/resources/dy-drafts/materials/: srt.json  video.json
src-tauri/resources/jy_drafts/: draft_content.json  draft_meta_info.json
src-tauri/resources/jy_drafts/contents/: audio.json  beat.json  canvas.json  sound_channel_mapping.json  text-content.json  text.json  text_content.json  track.json  track_audio_segment.json  track_text_segment.json  track_video_segment_chip.json  track_video_segment_keyframe.json  video.json  vocal_separation.json
src-tauri/resources/jy_drafts/materials/: audio.json  photo.json  video.json
src-tauri/src/: cmd.rs  key_export_cmd.rs  key_generate_cmd.rs  key_image_scale_cmd.rs  main.rs
src-tauri/src/execute/: command.rs  mod.rs  pool.rs
src-tauri/src/handle/: export.rs  generate.rs  mod.rs  scale.rs
src-tauri/src/http/: download.rs  mod.rs  upload.rs
src/api/: baidu_api.tsx  bytedance_api.tsx  comfyui_api.tsx  gpt_api.tsx  index.tsx
src/assets/: index.ts
src/components/: index.ts
src/components/addon-input/: index.less  index.tsx
src/components/create-project/: index.less  index.tsx
src/components/energy-recharge/: index.less  index.tsx
src/components/file-import/: index.less  index.tsx
src/components/handle-process/: index.less  index.tsx
src/components/header/: index.less  index.tsx
src/components/history-image/: index.less  index.tsx
src/components/imitate-project/: index.tsx
src/components/jydraft/: index.less  index.tsx
src/components/login/: index.less  index.tsx
src/components/member-recharge/: index.less  index.tsx
src/components/mode-select/: index.tsx
src/components/recharge/: index.less  index.tsx
src/components/set-modal/: index.less  index.tsx
src/components/update-version/: index.less  index.tsx
src/components/user-info/: index.less  index.tsx
src/components/voice-select/: index.tsx
src/layouts/: index.less  index.tsx
src/pages/agreement/: index.less  index.tsx
src/pages/create/: data.ts  drawbatch.tsx  index.less  index.tsx  storyboard.tsx  videogeneration.tsx
src/pages/draft/: index.less  index.tsx
src/pages/hot/: index.tsx
src/pages/imitate/: data.ts  index.less  index.tsx
src/pages/imitate-mock/: index.tsx
src/pages/index/: index.less  index.tsx
src/repository/: actor.tsx  chapter.tsx  comfyui.tsx  comfyui_api.tsx  draft.tsx  draft_utils.tsx  drafts.tsx  generate_utils.tsx  gpt.tsx  gpt_api.tsx  keyframe.tsx  setting.tsx  simulate.tsx  srt.tsx  story.tsx  tauri_repository.tsx  translate.tsx  translate_api.tsx  tts.tsx  tts_api.tsx  video.tsx  workspace.tsx
src/stores/: actor.tsx  api.tsx  auth.tsx  comfyui.tsx  frame.tsx  gpt.tsx  project.tsx  story.tsx
src/uses/: index.ts  useLogin.ts
src/utils/: cache.ts  common.ts  devicePixelRatio.ts  index.ts
(+66 files in other folders)
