[package]
name = "aip"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "unstable", "devtools"] }
reqwest = { version = "0.11.25", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-shell = { git = "https://github.com/otk-final/plugins-workspace", tag = "shell-v2.0.0-x" }
tauri-plugin-updater = "2.0.0-beta.2"
tauri-plugin-process = "2.0.0-beta.2"
tauri-plugin-http = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.2"
tauri-plugin-clipboard-manager = "2.0.0-beta.2"
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-os = "2.0.0-beta.2"
futures = { version = "0.3.30", features = ["thread-pool"] }
lazy_static = "1.4.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
rayon = "1.8.1"
rand = "0.8.5"
image = "0.24.9"
imageproc = "0.23.0"
url = "2.5.0"
tauri-plugin-upload = "2.0.0-beta.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
